# diesel_guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  action.yml  deny.toml  diesel-guard.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  code_review.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  output.rs  safety_checker.rs  violation.rs
src/checks/: add_column.rs  add_index.rs  add_json_column.rs  add_not_null.rs  add_primary_key.rs  add_serial_column.rs  add_unique_constraint.rs  alter_column_type.rs  create_extension.rs  drop_column.rs  drop_primary_key.rs  mod.rs  rename_column.rs  rename_table.rs  short_int_primary_key.rs  test_utils.rs  truncate_table.rs  unnamed_constraint.rs  wide_index.rs
src/parser/: comment_parser.rs  mod.rs  primary_key_using_index_detector.rs  unique_using_index_detector.rs
tests/: config_test.rs  fixtures_test.rs  init_test.rs  safety_assured_test.rs
tests/fixtures/add_column_safe/: up.sql
tests/fixtures/add_column_with_default/: up.sql
tests/fixtures/add_json_column_safe/: up.sql
tests/fixtures/add_json_column_unsafe/: up.sql
tests/fixtures/add_not_null/: up.sql
tests/fixtures/add_primary_key_safe/: up.sql
tests/fixtures/add_primary_key_unsafe/: up.sql
tests/fixtures/add_serial_column_unsafe/: up.sql
tests/fixtures/add_unique_constraint_safe/: up.sql
tests/fixtures/add_unique_constraint_unsafe/: up.sql
tests/fixtures/alter_column_type/: up.sql
tests/fixtures/alter_column_type_with_using/: up.sql
tests/fixtures/create_extension_unsafe/: up.sql
tests/fixtures/drop_column/: up.sql
tests/fixtures/drop_column_if_exists/: up.sql
tests/fixtures/drop_multiple_columns/: up.sql
tests/fixtures/drop_not_null/: up.sql
tests/fixtures/drop_primary_key_unsafe/: up.sql
tests/fixtures/safe/: up.sql
tests/fixtures/safety_assured_drop/: up.sql
tests/fixtures/safety_assured_multiple/: up.sql
tests/fixtures/short_int_pk_safe/: up.sql
tests/fixtures/short_int_pk_unsafe/: up.sql
tests/fixtures/truncate_table_unsafe/: up.sql
tests/fixtures/unique_using_index_with_unsafe/: up.sql
tests/fixtures/unnamed_constraint_safe/: up.sql
tests/fixtures/unnamed_constraint_unsafe/: up.sql
tests/fixtures/unsafe/: up.sql
tests/fixtures/wide_index_safe/: metadata.toml  up.sql
tests/fixtures/wide_index_unsafe/: up.sql
